fixed bottom links broken on mobile

--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
-html, body {
+html,
+body {
   scroll-behavior: smooth;
   margin: 0;
   padding: 0;
   height: 100%;
   width: 100%;
   overflow: auto;
-  font-family: 'JetBrains Mono';font-size: 18px;
+  font-family: 'JetBrains Mono';
+  font-size: 18px;
   background-color: rgb(24, 24, 24);
   color: white;
   text-align: center;
@@ -26,23 +28,23 @@ h2 {
 }
 
 section p {
-  margin:0;
-  padding:10px;
+  margin: 0;
+  padding: 10px;
 }
 
 
 .topnav {
-  overflow: hidden;
+  /* overflow: hidden; */
   display: flex;
   justify-content: right;
   width: 100%;
-  height:10vh;
+  height: 10vh;
   position: fixed;
 }
 
 .nav-item {
   text-decoration: none;
-  
+
   margin: 2% 2%;
   padding: 10px;
   display: flex;
@@ -65,7 +67,7 @@ section p {
 }
 
 .icon {
-  cursor:pointer;
+  cursor: pointer;
   color: #d7e8ce;
   /* padding: 5px 5px; */
   margin: 20px 20px;
@@ -74,7 +76,7 @@ section p {
   z-index: 1;
 }
 
-.icon:hover{
+.icon:hover {
   color: turquoise;
 }
 
@@ -82,7 +84,7 @@ section {
   text-align: left;
   padding: 5rem;
   min-height: 100vh;
-  flex:1;
+  flex: 1;
   box-sizing: border-box;
 }
 
@@ -116,14 +118,15 @@ footer {
   flex-flow: row wrap;
   justify-content: center;
 }
-#projects .img-gallery > * {
+
+#projects .img-gallery>* {
 
   margin: 1em 1em;
   width: 25vw;
   height: auto;
 }
 
-#projects .img-gallery > *:hover {
+#projects .img-gallery>*:hover {
   zoom: 1.01;
   -moz-transform: scale(1.01);
   opacity: 0.5;
@@ -131,18 +134,20 @@ footer {
 
 div ul.contact-links {
   list-style: none;
+  /* overflow: hidden; */
+  display: flex;
+
+  justify-content: center;
 }
 
-div ul.contact-links li{
- display:inline-block;
+div ul.contact-links li {
+  float: left;
 }
 
-div.into-summary {
-  margin-right: 0;
+div.intro-summary {
   color: lightgray;
   line-height: 2;
   margin: 0 auto;
-  float: left;
   text-align: left;
   display: inline-block;
 }
